test/e2e/chainsaw/hybridgateway/httproute-multiple-backends/01-prerequisites.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ($kong_namespace)
---
apiVersion: v1
kind: Namespace
metadata:
  name: ($cross_namespace)
---
apiVersion: v1
kind: Namespace
metadata:
  name: default
---
kind: KonnectAPIAuthConfiguration
apiVersion: konnect.konghq.com/v1alpha1
metadata:
  name: ($konnect_api_auth_name)
  namespace: ($kong_namespace)
spec:
  type: token
  token: (env('KONNECT_TOKEN'))
  serverURL: (env('KONNECT_SERVER_URL') || 'eu.api.konghq.tech')
---
kind: GatewayConfiguration
apiVersion: gateway-operator.konghq.com/v2beta1
metadata:
  name: ($gateway_configuration_name)
  namespace: ($kong_namespace)
spec:
  konnect:
    authRef:
      name: ($konnect_api_auth_name)
  dataPlaneOptions:
    deployment:
      podTemplateSpec:
        spec:
          containers:
          - name: proxy
            image: kong/kong-gateway:3.12
---
kind: GatewayClass
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: ($gateway_class_name)
spec:
  controllerName: konghq.com/gateway-operator
  parametersRef:
    group: gateway-operator.konghq.com
    kind: GatewayConfiguration
    name: ($gateway_configuration_name)
    namespace: ($kong_namespace)
---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: ($gateway_name)
  namespace: ($kong_namespace)
spec:
  gatewayClassName: ($gateway_class_name)
  listeners:
  - name: http
    protocol: HTTP
    port: 80
