test/e2e/chainsaw/hybridgateway/httproute-multiple-backends/04-httproute-different-ports.yaml
---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: ($httproute_name)
  namespace: ($kong_namespace)
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ($gateway_name)
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /echo
      backendRefs:
        - name: echo
          port: 1027
          weight: 1
        - name: echo
          port: 1025
          weight: 1
