test/e2e/chainsaw/hybridgateway/httproute-multiple-backends/05-cross-namespace-backend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: echo-cross-ns
  name: echo-cross-ns
  namespace: ($cross_namespace)
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-cross-ns
  template:
    metadata:
      labels:
        app: echo-cross-ns
    spec:
      containers:
        - image: kong/go-echo:latest
          name: echo
          ports:
            - containerPort: 1027
          env:
            - name: NODE_NAME
              valueFrom:
                fieldRef:
                  fieldPath: spec.nodeName
            - name: POD_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: POD_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: POD_IP
              valueFrom:
                fieldRef:
                  fieldPath: status.podIP
          readinessProbe:
            httpGet:
              path: /
              port: 1027
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 210m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: echo-cross-ns
  name: echo-cross-ns
  namespace: ($cross_namespace)
spec:
  ports:
    - port: 80
      name: http
      protocol: TCP
      targetPort: 1027
  selector:
    app: echo-cross-ns
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-httproute-backend-ref
  namespace: ($cross_namespace)
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: ($kong_namespace)
  to:
    - group: ""
      kind: Service
