test/e2e/chainsaw/hybridgateway/httproute-multiple-backends/01-assert-prerequisites.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ($kong_namespace)
status:
  phase: Active
---
apiVersion: v1
kind: Namespace
metadata:
  name: ($cross_namespace)
status:
  phase: Active
