test/e2e/chainsaw/hybridgateway/httproute-multiple-backends/05-assert-cross-namespace-backend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: echo-cross-ns
  namespace: ($cross_namespace)
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-cross-ns
  namespace: ($cross_namespace)
status:
  (conditions[?type == 'Available']):
    - status: 'True'
  readyReplicas: 1
  replicas: 1
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-httproute-backend-ref
  namespace: ($cross_namespace)
